CheckStyle and PMD improvements.